--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,12 @@
 		</dependency>
 
 		<dependency>
+		<groupId>org.springframework.data</groupId>
+		<artifactId>spring-data-rest-hal-explorer</artifactId>
+		</dependency>
+
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
 			<version>3.0.4</version>
@@ -59,6 +65,8 @@
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 			<version>2.0.0</version>
 		</dependency>
+
+
 		<!-- Dependency to get responses in xml format -->
 		<dependency>
 			<groupId>com.fasterxml.jackson.dataformat</groupId>
