--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,13 +2,15 @@
 management.endpoints.web.exposure.include=*
 
 #spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.driverClassName=org.h2.Driver
 #spring.datasource.username=sa
 #spring.datasource.password=password
+
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.defer-datasource-initialization=true
 spring.show-sql=true
 
+spring.datasource.url=jdbc:mysql://localhost:3306/social-media-database
 spring.datasource.username=social-media-user
 spring.datasource.password=dummypassword
 spring.jpa.hibernate.ddl-auto=update
