setup spring security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,4 +15,7 @@ spring.datasource.username=social-media-user
 spring.datasource.password=dummypassword
 spring.jpa.hibernate.ddl-auto=update
 
+spring.security.user.username=username
+spring.security.user.password=password
+
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
